[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Translate.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/NotoSansJP-Med_30.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/NotoSansJP-Med_52.tres" type="DynamicFont" id=3]
[ext_resource path="res://Background.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 4.14108, 1, 0.164939 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.1 ), Color( 0.901961, 0.101961, 0.101961, 0.509804 ), Color( 0, 0, 0, 0.0980392 ) ]
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/Kenney Future Narrow.ttf"

[sub_resource type="DynamicFont" id=3]
size = 15
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = -2
extra_spacing_space = 4
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=11]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://assets/fonts/Kenney Future Narrow.ttf"

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = SubResource( 12 )

[node name="Translate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -665.813, 303.567 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 150
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 20.0
margin_top = 150.0
margin_right = 380.0
margin_bottom = 768.0
rect_min_size = Vector2( 350, 260 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kanji" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 145.0
focus_mode = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.364706, 0.443137, 1 )
text = "漢字"
align = 1
valign = 1

[node name="vspace" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 360.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 50 )

[node name="InputBranch" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 360.0
margin_bottom = 253.0
rect_min_size = Vector2( 0, 50 )

[node name="ColorRect" type="ColorRect" parent="CenterContainer/VBoxContainer/InputBranch"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.101961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/VBoxContainer/InputBranch/ColorRect"]
anims/Flash = SubResource( 1 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/InputBranch"]
anchor_top = -1.6
anchor_bottom = -1.4
margin_top = 58.0
margin_right = 300.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.364706, 0.443137, 1 )
text = "Type any translation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="CenterContainer/VBoxContainer/InputBranch"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/cursor_color = Color( 0.152941, 0.364706, 0.443137, 1 )
custom_colors/clear_button_color_pressed = Color( 0.152941, 0.364706, 0.443137, 1 )
custom_colors/font_color_selected = Color( 0.152941, 0.364706, 0.443137, 1 )
custom_colors/font_color = Color( 0.152941, 0.364706, 0.443137, 1 )
custom_colors/clear_button_color = Color( 0.152941, 0.364706, 0.443137, 1 )
custom_colors/font_color_uneditable = Color( 0.152941, 0.364706, 0.443137, 1 )
align = 1
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToStart" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -31.0
margin_right = 102.0
margin_bottom = -5.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReturnToStart"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.537255, 0.537255, 0.537255, 1 )
text = "BACK"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="correct_translation" from="." to="." method="_on_Translate_correct_translation"]
[connection signal="wrong_translation" from="." to="." method="_on_Translate_wrong_translation"]
[connection signal="text_entered" from="CenterContainer/VBoxContainer/InputBranch/Input" to="." method="_on_Input_text_entered"]
[connection signal="pressed" from="ReturnToStart" to="." method="_on_ReturnToStart_pressed"]
